# astroLens

./: .gitignore  DISCOVERY_GUIDE.md  Dockerfile  LICENSE  LINKEDIN_POST.md  README.md  TESTING.md  docker-compose.yml  docker-entrypoint.sh  paths.py  pyproject.toml  requirements.txt
agent/: __init__.py  agent.py  tools.py
annotator/: __init__.py  chain.py  prompts.py
api/: __init__.py  db.py  main.py  models.py
catalog/: __init__.py  cross_reference.py
docs/: LEARN.md  WIKI.md
features/: __init__.py  export.py  morphology.py  multiband.py  reconstruction.py  seti_signals.py  time_series.py
finetuning/: README.md  __init__.py  config.yaml  download_datasets.py  evaluate.py  pipeline.py  train.py
inference/: __init__.py  active_learning.py  classifier.py  duplicates.py  embeddings.py  gpu_utils.py  ood.py  yolo_detector.py
ingest/: __init__.py
models/: yolo_transient_v1.1.pt  yolo_transient_v1.pt
scripts/: anomaly_breakthrough.py  batch_analyze.py  daily_discovery.py  data_sources.py  discovery_logger.py  discovery_loop.py  download_weights.py  manage_models.py  nightly_ingest.py  streaming_discovery.py  streaming_report.py  test_discovery_integration.py  ui_monitor.py
tests/: __init__.py  conftest.py  debug_and_analyze.py  pytest.ini  requirements-test.txt  run_tests.py  test_all_features.py  test_api.py  test_catalog_crossref.py  test_full_system.py  test_inference.py  test_morphology.py  test_ood_detection.py  test_ui_components.py  test_ui_features.py  test_ui_integration.py
transient_detector/: __init__.py  data_collector.py  pipeline.py  (+4 more)
(+27 files in other folders)
