[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrolens"
version = "0.1.0"
description = "AI-powered image analysis with ML classification and LLM insights"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Saman Tabatabaeian", email = "saman.tabatabaeian@gmail.com"}
]
keywords = ["ai", "ml", "image-analysis", "computer-vision", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/samantaba/AstroLens"
Repository = "https://github.com/samantaba/AstroLens"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "inference*", "annotator*", "agent*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
